BJS2-79144 Добавил lambok Переопределил ToString Добавил вывод в консоль